Complete basic UI and js code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="wooden-fish-box">
+            <div class="msg-box"></div>
             <img src="img/wooden-fish.jpg" alt="wooden fish" class="js-wooden-fish">
         </div>
     </div>
